kubernetes/apps/base/forgejo/ingress.yaml
# Forgejo Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - git.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: git.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  number: 80
